--- a/Careers.html
+++ b/Careers.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en"> 
 <head> 
 <meta charset="utf-8">
@@ -18,13 +18,13 @@
 <img src= "images/Cinor Manor Villa and Spa logo.jpg" alt="Company Logo"width="150" height: "150">
 
 <ul>
-	<li><a class="active"ref="file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Home%20Page.html"About Us </a></li>
-	<li><a href="file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Cinro%20Experience.html">Cinro Manor Experience</a></li>
-    <li><a href="file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Accommodations.html">Accommodation</a></li>
-    <li><a href="file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Galllery.html">Gallery</a></li>
-    <li><a href="file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Contact%20Us.html">Contact Us</a></li>
-    <li><a href="file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Careers.html">Careers</a></li>
-    <li><a href="file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Cinro%20Experience.html"><button type="button">Plan Your Stay</button></li></a>
+	<li><a class="active"ref="Index.html"About Us </a></li>
+	<li><a href="Cinro Manor Experience.html">Cinro Manor Experience</a></li>
+    <li><a href="Accommodation.html">Accommodation</a></li>
+    <li><a href="Gallery.html/Galllery.html">Gallery</a></li>
+    <li><a href="Contact Us.html">Contact Us</a></li>
+    <li><a href="Career.html">Careers</a></li>
+    <li><a href="Plan Your Stay.html"><button type="button">Plan Your Stay</button></li></a>
 </ul>
 </nav>
  <section></section>
@@ -138,19 +138,21 @@ a:hoveactive{
 <br>
 
 <img src="images/Employee Pic.png" alt="staff photo"style="width:"50%"" height:"50%"">
-<p style="color:#330000;font-size:38px; text-align:left; text-indent:50px;">  Join the Cinor Manor Villa and Spa Team</p>
+<p style="color:#330000;font-size:38px; text-align:left; text-indent:50px;">  Join the Cinro Manor Villa and Spa Team</p>
 <br> 
 
  
- <p  style="color:#ffde59; font-size:32px; text-align:left; text-indent:90px;"> People are at the heart of all we do!</p>
+ <p  style="color:#ffde59; font-size:44px; text-align:left; text-indent:90px;"> People are at the heart of all we do!</p>
 <br> <br>
 
  
-<p style="color:#ffffcc; font-size: 22px; text-align: left; text-indent: 5px;"> Delighting customers is our top priority! Memorable moments are created each day at our villa and spa as we passionately deliver exceptional memories and unforgettable service to our guest in a vibrant atmosphere.</p>
+<p style="color:#330000; font-size: 35px; text-align: left; text-indent: 5px;"> Delighting customers is our top priority! Memorable moments are created each day at our villa and spa as we passionately deliver exceptional memories and unforgettable service to our guest in a vibrant atmosphere.</p>
 
 <br> <br>
-<p style="color:#ffffcc; font-size: 22px; text-align: left;text-indent: 5px;">If you are willing to embark on a rewarding career path, your future begins here.  Send us your resume and if there is any available position that align with your application, our Team will get in touch with you. Email us at: <a href="mailto:cinromanor@gmail.com">cinromanor@gmail.com</a></p>
+<p style="color:#330000; font-size: 35px; text-align: left;text-indent: 5px;">If you are willing to embark on a rewarding career path, your future begins here. Send us your resume and if there is any available position that align with your application, our Team will get in touch with you. Email us at: <a href="mailto:cinromanor@gmail.com">cinromanor@gmail.com</a></p>
 
+	
+	
 <br>
 </section>
 
@@ -233,7 +235,7 @@ img{
                     </div>
 
                     <span>
-                        <p>&copy; Cinro Manor Villa and Spa 2024 </p>
+                        <p>&copy; Copyright 2024 All rights reserved by Cinro Manor Villa and Spa </p>
                 </span>
                </div>
                 </div>
