--- a/Contact Us.html
+++ b/Contact Us.html
@@ -19,12 +19,12 @@
 
 <ul>
 	<li><a class="active"ref="file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Home%20Page.html"About Us </a></li>
-	<li><a href="file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Cinro%20Experience.html">Cinro Manor Experience</a></li>
-    <li><a href="file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Accommodations.html">Accommodation</a></li>
-    <li><a href="file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Galllery.html">Gallery</a></li>
-    <li><a href="file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Contact%20Us.html">Contact Us</a></li>
-    <li><a href="file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Careers.html">Careers</a></li>
-    <li><a href="file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Cinro%20Experience.html"><button type="button">Plan Your Stay</button></li></a>
+	<li><a href="Index.html">Cinro Manor Experience</a></li>
+    <li><a href="Accommodation.html">Accommodation</a></li>
+    <li><a href="Galllery.html">Gallery</a></li>
+    <li><a href="Contact Us.html">Contact Us</a></li>
+    <li><a href="Careers.html">Careers</a></li>
+    <li><a href="Plan Your Stay.html"><button type="button">Plan Your Stay</button></li></a>
 </ul>
 </nav>
  <section></section>
@@ -331,7 +331,7 @@ a:hoveactive{
                     </div>
 
                     <span>
-                        <p>&copy; Cinro Manor Villa and Spa 2024 </p>
+                        <p>&copy; Copyright 2024 All rights reserved by Cinro Manor Villa and Spa  </p>
                 </span>
                </div>
                 </div>
