Update and rename Accommodations.html to Accommodation.html

--- a/Accommodation.html
+++ b/Accommodation.html
@@ -18,13 +18,13 @@
 <img src= "images/Cinor Manor Villa and Spa logo.jpg" alt="Company Logo"width="150" height: "150">
 
 <ul>
-  <li><a class="active"ref="file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Home%20Page.html"About Us </a></li>
-  <li><a href="file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Cinro%20Experience.html">Cinro Manor Experience</a></li>
-    <li><a href="file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Accommodations.html">Accommodation</a></li>
-    <li><a href="file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Galllery.html">Gallery</a></li>
-    <li><a href="file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Contact%20Us.html">Contact Us</a></li>
-    <li><a href="file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Careers.html">Careers</a></li>
-    <li><a href="file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Cinro%20Experience.html"><button type="button">Plan Your Stay</button></li></a>
+  <li><a class="active"ref="Index.html"About Us </a></li>
+  <li><a href="Cinro Experience.html">Cinro Manor Experience</a></li>
+    <li><a href="Accommodations.html">Accommodation</a></li>
+    <li><a href="Galllery.html">Gallery</a></li>
+    <li><a href="Contact Us.html">Contact Us</a></li>
+    <li><a href="Careers.html">Careers</a></li>
+    <li><a href="Plan Your Stay.html"><button type="button">Plan Your Stay</button></li></a>
 </ul>
 </nav>
  <section></section>
@@ -140,9 +140,10 @@ a:hoveactive{
 
  <h1 style="color:#330000;font-size:40px; text-align:center;font-family: times roman;"> Explore Our ROOMS  </h1>
  <br>
-<p style="color:#330000; font-size:35px; text-align:center;"> Our accommodations are inspiring, stylish and intimate in equal measure designed to create a memorable ambience.</p>
+<p style="color:#ffff99; font-size:38px; text-align:center;"> Our accommodations are inspiring, stylish and intimate in equal measure designed to create a memorable ambience.</p>
 <br>
-<p style="color:#ffffcc;font-size:25px; text-align:center;">Enjoy a blend of comfort and style, both spacious and elegantly decorated with superb amenities to  ensure a cozy and relaxing atmosphere.Our six (6) bedroom villa boast of two (2) self contained floors which allows you the option for a single floor rental. Adding to the luxury experience, we have the pleasure to enjoy our very own Jencare Day Spa just footsteps away to cater to all your wellness needs as you journey on the path to rejuvenating your mind,body and soul.</p>
+<p style="color:#330000;font-size:30px; text-align:center;">Enjoy a blend of comfort and style, spacious and elegantly decorated with superb amenities to  ensure a cozy and relaxing atmosphere.</p>
+ <p style="color:#330000; font size:30px; text-align:center;">Our six (6) bedroom villa boast of two (2) self contained floors which allows you the option for a single floor rental. Adding to the luxury experience, we have the pleasure to enjoy our very own Jencare Day Spa just footsteps away to cater to all your wellness needs as you journey on the path to rejuvenating your mind, body and soul.</p>
 
 <br> <br>
 
@@ -263,9 +264,9 @@ a:hoveactive{
 </style>
 <hr>
 <br> <br> <br> 
-<h2 style="color:#330000;font-size:38px; font-family:times roman;text-align:center;"> About Our PROPERTY </h2>
+<h2 style="color:#330000;font-size:40px; font-family:times roman;text-align:center;"> About Our PROPERTY </h2>
     <br> 
-     <p style="color:#ffffcc;font-size:30px; font-family:times roman;text-align:center;"> Cinro Manor Villa and Spa property has its own personality and was designed to capture spectacular views in an atmosphere that makes this setting feel like home.</p>
+     <p style="color:#330000;font-size:36px; font-family:times roman;text-align:center;"> Cinro Manor Villa and Spa property has its own personality and was designed to capture spectacular views in an atmosphere that makes this setting feel like home.</p>
      <br>
     
     <img src = "images/Resized Room 18-1.jpg" alt="property" style="width:225px; height:250px;">
@@ -394,10 +395,10 @@ for (var i = 0; i < btns.length; i++) {
 <br> <br>
 
 
- <p style="color:#ffffcc;font-size:28px; text-align:left; font-family:times roman;">Pool, jacuzzi, gazebo, on-site spa, BBQ Grill, out door kitchen & bar, fully equipped kitchens, additional outdoor restrooms, open air showers, air conditioning & ceiling fans, Netflix & cable,  wi-fi, fire extinguishers, first aid kit, smoke alarm, washer & dryer, iron, mini bath soap, extra pillows, towels and linens. No Pets allowed! </p>
+ <p style="color:#ffff99;font-size:35px; text-align:left; font-family:times roman;">Pool, jacuzzi, gazebo, on-site spa, BBQ Grill, out door kitchen & bar, fully equipped kitchens, additional outdoor restrooms, open air showers, air conditioning & ceiling fans, Netflix & cable,  wi-fi, fire extinguishers, first aid kit, smoke alarm, washer & dryer, iron, mini bath soap, extra pillows, towels and linens. No Pets allowed! </p>
  <br>
 <br><br>
-<h1 style="color:#330000; font-size:38pxpx; text-align:left;font-family: times roman;"> The PERFECT DAYCATION</h1>
+<h1 style="color:#330000; font-size:38px; text-align:left;font-family: times roman;"> The PERFECT DAYCATION</h1>
 
  <br>
 <p style="color:#ffda00;font-size:33px; text-align:left;font-family: times roman;">  Elevate your <strong>Vacation!</strong> </p>
@@ -432,7 +433,7 @@ for (var i = 0; i < btns.length; i++) {
 
 
 <br>
-<ul style="color:#f1c232;font-size:23px; text-align:left;font-family: times roman;">
+<ul style="color:#ffff99;font-size:23px; text-align:left;font-family: times roman;">
 
 <li> <strong>Day Pass</strong> TT$500.00 </li>
 <li> <strong>Extended Day Pass</strong> TT$650.00 </li>
@@ -544,10 +545,10 @@ img:nth-child(5) {
 
                 <div>
                     <h2>Useful Links</h2>
-                    <a href = "#">Events</a>
-                    <a href = "#">Rooms</a>
-                    <a href = "#">Jencare Day Spa</a>
-                    <a href = "#">Gifts</a>
+                    <a href = <file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Cinro%20Experience.html>">Events</a>
+                    <a href = <file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Accommodations.html>Rooms>Rooms</a>
+                    <a href =  <a href = <a href="https://www.facebook.com/jencaredayspatt/">Jencare Day Spa</a>
+                    <a href = <file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Cinro%20Experience.html>>Gifts</a>
                 </div>
 
                   <div>
@@ -584,7 +585,7 @@ img:nth-child(5) {
                     </div>
 
                     <span>
-                        <p>&copy; Cinro Manor Villa and Spa 2024 </p>
+                        <p>&copy; Copyright 2024 All rights reserved by Cinro Manor Villa and Spa 2024 </p>
                 </span>
                </div>
                 </div>
