--- a/Accommodation.html
+++ b/Accommodation.html
@@ -271,7 +271,7 @@ a:hoveactive{
     
     <img src = "images/Resized Room 18-1.jpg" alt="property" style="width:225px; height:250px;">
     <img src = "images/gazebo.png" alt="property" style="width:300px; height:350px;">
-    <img src = "images/pic 10.png" alt="property" style="width:350px; height:400px;"> 
+    <img src = "images/Pic 10.png" alt="property" style="width:350px; height:400px;"> 
 
         <br>  <br>
      
