--- a/Index.html
+++ b/Index.html
@@ -18,13 +18,13 @@
 <img src= "images/Cinor Manor Villa and Spa logo.jpg" alt="Company Logo"width="150" height: "150">
 
 <ul>
-  <li><a class="active"ref="file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Home%20Page.html"Index.html </a></li>
-  <li><a href="file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Cinro%20Experience.html">Cinro Manor Experience</a></li>
-    <li><a href="file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Accommodations.html">Accommodation</a></li>
-    <li><a href="file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Galllery.html">Gallery</a></li>
-    <li><a href="file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Contact%20Us.html">Contact Us</a></li>
-    <li><a href="file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Careers.html">Careers</a></li>
-    <li><a href=><button type="button">Plan Your Stay</button></li></a>
+  <li><a class="active"ref="Index.html>"Home Page </a></li>
+  <li><a href="Cinro Experience.html">Cinro Manor Experience</a></li>
+    <li><a href="Accommodation.html">Accommodation</a></li>
+    <li><a href="Galllery.html">Gallery</a></li>
+    <li><a href="Contact Us.html">Contact Us</a></li>
+    <li><a href="Careers.html">Careers</a></li>
+    <li><a href=>Plan Your Stay.html<button type="button">Plan Your Stay</button></li></a>
 </ul>
 </nav>
  <section></section>
@@ -136,10 +136,7 @@ a:hoveactive{
 </style>
 
 <div class="slideshow-container">
-
-
-
-  <div class="numbertext"> </div>
+<div class="numbertext"> </div>
   <img src="images/Property Pic.jpg" style="width:100%">
   </div>
 
@@ -242,7 +239,7 @@ img {vertical-align: middle;}
 }
 
 .active {
-  background-color: #717171;
+  background-color: none;
 }
 
 /* Fading animation */
@@ -369,16 +366,30 @@ img {vertical-align: middle;}
 
 <br>
 
-<p style="color:#ffffcc;font-size:25px; text-align:left;"> Embark on a journey of unparalleled relaxation and rejuvenation as an oasis of calm awaits. Situated in lowlands Tobago, Cinro Manor Villa and Spa  hold no less beauty or charm, tastefully decorated with all modern amenities  and outfitted with a private pool for your ultimate enjoyment.</p>
+<p style="color:#ffff99;font-size:36px; text-align:left;"> Embark on a journey of unparalleled relaxation and rejuvenation as an oasis of calm awaits.
+
+<br> <br>
+
+ <p style="color:#330000;font-size:35px; text-align:left;">Situated in lowlands Tobago, Cinro Manor Villa and Spa  hold no less beauty or charm, tastefully decorated with all modern amenities and outfitted with a private pool for your ultimate enjoyment.</p>
   <br> 
 
-<p style="color:#ffffcc;font-size:24px; text-align:left;"> In an era where privacy and safety remains pivotal, Cinro Manor Villa  and Spa is simply an island gem and the perfect staycation for persons seeking a safe, quiet and peaceful location to unwind, relax and recharge.</p>
-
- <br> <br>
-
-<p style="color:#ffffcc;font-size:25px; text-align:left;"> Treat yourself to the epitome of relaxation and beauty at  our Spa with our exquisite  spa treatments and services  designed to rejuvenate  and revive your soul as you  indulge in luxury escape at our serene oasis, where relaxation meets sophistication.Your paradise awaits!</p4>
+<br>
+<p style="color:#330000;font-size:35px; text-align:left;"> In an era where privacy and safety remains pivotal, Cinro Manor Villa  and Spa is simply an island gem and the perfect staycation for persons seeking a safe, quiet and peaceful location to unwind, relax and recharge.</p></div>
 
 </div>
+
+<br> <br><br>
+ 
+<p style="color:#ffffcc;font-size:45px; text-align:left;"> Treat YOURSELF </p>
+    <p style="color:#ffff99;font-size:30px; text-align:left;">relaxation and beauty</p> 
+<p style="color:#ffe633;font-size:40px; text-align:left;"> REJUVENATE</p>
+<p style="color:#ffff99;font-size:30px; text-align:left;"> revive your soul</p>
+<p style="color:#ffffcc;font-size:40px; text-align:left;"> LUXURY ESCAPE</p>
+<p style="color:#ffe633;font-size:30px; text-align:left;"> serene oasis</p>
+<p style="color:#ffff99;font-size:30px; text-align:left;">  relaxation meets sophistication</p>
+<p style="color:#ffda00;font-size:45px; text-align:left;"> YOUR PARADISE AWAITS AT CINRO MANOR!</p>
+
+
 
  <style>
     .welcome-container img{
@@ -396,17 +407,18 @@ img {vertical-align: middle;}
 
 
 <div class="accommodations-container">
+<br> <br>
 
-<h2 style="color:#330000;font-size:35px; text-align:left"> ROOMS /POOL SIDE /BALCONY/ VILLA </h2>
+<h2 style="color:#330000;font-size:40px; text-align:left"> ROOMS /POOL SIDE /BALCONY/ VILLA </h2>
 <br>
 
-<h3 style="color:#ffff99;font-size:33px; text-align:left;"> Plan Your Stay </h3>
+<h3 style="color:#ffff99;font-size:39px; text-align:left;"> Plan Your Stay </h3>
 <br>
 
- <p style="color:#ffffcc;font-size:25px; text-align:left;"> Our six (6) bedroom villa boast of two (2) self contained floors which allows you the option for a single floor rental. In adding to the luxury experience, we have the pleasure to enjoy our very own Jencare Day Spa just footsteps away to cater to all your wellness needs as you journey on the path to rejuvenating your mind, body and soul.</p>
+ <p style="color:#330000;font-size:35px; text-align:left;"> Our six (6) bedroom villa boast of two (2) self contained floors which allows you the option for a single floor rental. In addition to the luxury experience, you have the pleasure to enjoy our very own Jencare Day Spa just footsteps away to cater to all your wellness needs as you journey on the path to rejuvenating your mind, body and soul.</p>
 
-<br>
-<p style="color:#ffffcc;font-size:25px; text-align:left;">  Enjoy a comfortable Cinro Manor Villa offers an ideal staycation spot, blending comfort with luxury. Nestled in a serene environment, the villa provides spacious accommodations, elegantly decorated to ensure a cozy and relaxing atmosphere.</p>
+<br><br>
+<p style="color:#330000;font-size:35px; text-align:left;"> Cinro Manor Villa offers an ideal staycation spot, blending comfort with luxury. Nestled in a serene environment, the villa provides spacious accommodations, elegantly decorated to ensure a cozy and relaxing atmosphere.</p>
 
 
 <button type="button" <a class="btn"><a href="file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Accommodations.html"> DISCOVER MORE </button> </a>
@@ -494,16 +506,16 @@ px;
 <!--Cinro Manor Experience-->
 <div class="Cinro Experience-container">
 
-<h2 style="color:#330000;font-size:39px; text-align:center;"> Cinro Manor Experience </h2>
+<h2 style="color:#330000;font-size:40px; text-align:center;"> Cinro Manor Experience </h2>
 <br>
 
-<h3 style="color:#ffda00;font-size:35px; text-align:center;">The Great Escape ... for the Body, Mind and Soul! </h3>
+<h3 style="color:#ffda00;font-size:39px; text-align:center;">The Great Escape ... for the Body, Mind and Soul! </h3>
 <br> <br>
 
- <p style="color:#330000;font-size:28px; text-align:center;"> <strong> Make Lasting Memories! </strong> </p>
+ <p style="color:#ffda00;font-size:37px; text-align:center;"> <strong> Make Lasting Memories! </strong> </p>
  <br>
 
- <p style="color:#FFFF99;font-size:25px;">Let's make your stay unforgetable at our versatile villa and spa. Create your perfect adventure as you explore our beautiful island, Tobago. The possibilities are endless, whether sea bathing, snorkelling, horseback riding or relaxing at the Cinro Manor Villa and Spa. We guarantee a rejuventating escape.</p>
+ <p style="color:#330000;font-size:35px;">Let's make your stay unforgetable at our versatile villa and spa. Create your perfect adventure as you explore our beautiful island, Tobago. The possibilities are endless, whether sea bathing, snorkelling, horseback riding or relaxing at the Cinro Manor Villa and Spa. We guarantee a rejuventating escape.</p>
 
 </div>
 </section>
@@ -515,10 +527,10 @@ px;
 <!--Events-->
 <div class="events-container">
 
-<p style="color:#330000;font-size:25px; text-align:center;"><strong> Hosting your birthday party, wedding, engagement or corporate retreat with sophistication and charm.</strong></p>
+<p style="color:#330000;font-size:35px; text-align:center;"><strong> Hosting your birthday party, wedding, engagement or corporate retreat with sophistication and charm.</strong></p>
 <br>
 
-<p style="color:#ffff99;font-size:27px; text-align:center;">We have the  perfect space for your private celebrations or special event. </p>
+<p style="color:#330000;font-size:35px; text-align:center;">We have the  perfect space for your private celebrations or special event. </p>
 </div>
 
 </section>
@@ -865,7 +877,7 @@ q {font-style: italic;}
                 <div>
                     <h2>Useful Links</h2>
                     <a href = <file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Cinro%20Experience.html>Events</a>
-                    <a href = <file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Accommodations.html>Rooms</a>
+                    <a href = <file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Accommodation.html>Rooms</a>
                     <a href = <a href="https://www.facebook.com/jencaredayspatt/">Jencare Day Spa</a>
                     <a href = <file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Cinro%20Experience.html>Gifts</a>
                 </div>
@@ -904,7 +916,7 @@ q {font-style: italic;}
                     </div>
 
                     <span>
-                        <p>&copy; Cinro Manor Villa and Spa 2024 </p>
+                        <p>&copy; Copyright 2024  All rights reserved by Cinro Manor Villa and Spa </p>
                 </span>
                </div>
                 </div>
@@ -1003,3 +1015,6 @@ q {font-style: italic;}
 </body>
 
 </html>
+
+
+ 
