--- a/Careers.html
+++ b/Careers.html
@@ -19,7 +19,7 @@
 
 <ul>
 	<li><a class="active"ref="Index.html"About Us </a></li>
-	<li><a href="Cinro Manor Experience.html">Cinro Manor Experience</a></li>
+	<li><a href="Cinro Experience.html">Cinro Manor Experience</a></li>
     <li><a href="Accommodation.html">Accommodation</a></li>
     <li><a href="Gallery.html/Galllery.html">Gallery</a></li>
     <li><a href="Contact Us.html">Contact Us</a></li>
