--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,7 @@
 
 <ul>
   <li><a class="active"ref="Index.html>"Home Page </a></li>
-  <li><a href="Cinro Experience.html">Cinro Manor Experience</a></li>
+  <li><a href="Cinro Experience.html">Cinro Experience</a></li>
     <li><a href="Accommodation.html">Accommodation</a></li>
     <li><a href="Galllery.html">Gallery</a></li>
     <li><a href="Contact Us.html">Contact Us</a></li>
