--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,7 @@
 <img src= "images/Cinor Manor Villa and Spa logo.jpg" alt="Company Logo"width="150" height: "150">
 
 <ul>
-  <li><a class="active"ref="Index.html>"Home Page </a></li>
+  <li><a class="active"ref="Index.html">About Us </a></li>
   <li><a href="Cinro Experience.html">Cinro Experience</a></li>
     <li><a href="Accommodation.html">Accommodation</a></li>
     <li><a href="Galllery.html">Gallery</a></li>
