--- a/Accommodation.html
+++ b/Accommodation.html
@@ -12,10 +12,16 @@
 </head>
 <body>
 <nav>
+<!-- Header Area Start -->
+<header class="header-area">
+<!-- Navbar Area -->
+<div class="conntainer">
 
-<input type="checkbox" id="check">
-<logo for ="check" class="checkbtn">
-<img src= "images/Cinor Manor Villa and Spa logo.jpg" alt="Company Logo"width="150" height: "150">
+<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+<div class="container">
+<a class="navbar-brand" href="index.html"><img src= "images/Cinor Manor Villa and Spa logo.jpg" alt="Company Logo"width="150" height: "150"></a>
+<div class="collapse navbar-collapse" id="ftco-nav">
+<ul class="navbar-nav ml-auto">
 
 <ul>
   <li><a class="active"ref="Index.html"About Us </a></li>
