--- a/Galllery.html
+++ b/Galllery.html
@@ -13,18 +13,24 @@
 <body>
 <nav>
 
-<input type="checkbox" id="check">
-<logo for ="check" class="checkbtn">
-<img src= "images/Cinor Manor Villa and Spa logo.jpg" alt="Company Logo"width="150" height: "150">
+<!-- Header Area Start -->
+<header class="header-area">
+<!-- Navbar Area -->
+<div class="conntainer">
 
+<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+<div class="container">
+<a class="navbar-brand" href="index.html"><img src= "images/Cinor Manor Villa and Spa logo.jpg" alt="Company Logo"width="150" height: "150"></a>
+<div class="collapse navbar-collapse" id="ftco-nav">
+<ul class="navbar-nav ml-auto">
 <ul>
-  <li><a class="active"ref="file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Home%20Page.html"About Us </a></li>
-  <li><a href="file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Cinro%20Experience.html">Cinro Manor Experience</a></li>
-    <li><a href="file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Accommodations.html">Accommodation</a></li>
-    <li><a href="file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Galllery.html">Gallery</a></li>
-    <li><a href="file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Contact%20Us.html">Contact Us</a></li>
-    <li><a href="file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Careers.html">Careers</a></li>
-    <li><a href="file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Cinro%20Experience.html"><button type="button">Plan Your Stay</button></li></a>
+  <li><a class="active"ref="Index.html"About Us </a></li>
+  <li><a href="Cinro Experience.html">Cinro Experience</a></li>
+    <li><a href="Accommodation.html">Accommodation</a></li>
+    <li><a href="Galllery.html">Gallery</a></li>
+    <li><a href="Contact Us.html">Contact Us</a></li>
+    <li><a href="Careers.html">Careers</a></li>
+    <li><a href="Plan Your Stay.html"><button type="button">Plan Your Stay</button></li></a>
 </ul>
 </nav>
  <section></section>
@@ -616,7 +622,7 @@ button:focus{
                 <div>
                     <h2>Useful Links</h2>
                     <a href = "file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Cinro%20Experience.html">Events</a>
-                    <a href = "file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Accommodations.html">Rooms</a>
+                    <a href = "file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Accommodation.html">Rooms</a>
                     <a href = "https://www.facebook.com/jencaredayspatt/">Jencare Day Spa</a>
                     <a href = "file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Cinro%20Experience.html">Gifts</a>
                 </div>
@@ -655,7 +661,7 @@ button:focus{
                     </div>
 
                     <span>
-                        <p>&copy; Cinro Manor Villa and Spa 2024 </p>
+                        <p>&copy; Copyright 2024 All rights reserved by Cinro Manor Villa and Spa  </p>
                 </span>
                </div>
                 </div>
