--- a/Cinro Experience.html
+++ b/Cinro Experience.html
@@ -30,7 +30,7 @@
     <li><a href="Galllery.html">Gallery</a></li>
     <li><a href="Contact Us.html">Contact Us</a></li>
     <li><a href="Careers.html">Careers</a></li>
-    <li><a href="file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Cinro%20Experience.html"><button type="button">Plan Your Stay</button></li></a>
+    <li><a href="Plan Your Stay.html"><button type="button">Plan Your Stay</button></li></a>
 </ul>
 </nav>
  <section></section>
