--- a/Contact Us.html
+++ b/Contact Us.html
@@ -24,8 +24,8 @@
 <div class="collapse navbar-collapse" id="ftco-nav">
 <ul class="navbar-nav ml-auto">
 <ul>
-	<li><a class="active"ref="file:///C:/Users/Blessed/Desktop/cinor%20manor%20website/html/Home%20Page.html"About Us </a></li>
-	<li><a href="Index.html">Cinro Manor Experience</a></li>
+	<li><a class="active"ref="Index.html"About Us </a></li>
+	<li><a href="Cinro Experience.html">Cinro Experience</a></li>
     <li><a href="Accommodation.html">Accommodation</a></li>
     <li><a href="Galllery.html">Gallery</a></li>
     <li><a href="Contact Us.html">Contact Us</a></li>
